Added 1 more moethod and swagger doc
